[gd_scene load_steps=2 format=3 uid="uid://dyj07da8tde3x"]

[ext_resource type="Script" uid="uid://k8w826kr0445" path="res://addons/godot_core_system/examples/time_demo/time_demo.gd" id="1_w8g4f"]

[node name="TimeDemo" type="Node2D"]
script = ExtResource("1_w8g4f")

[node name="UI" type="CanvasLayer" parent="."]

[node name="GameTimeLabel" type="Label" parent="UI"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -100.0
offset_top = 20.0
offset_right = 100.0
offset_bottom = 46.0
grow_horizontal = 2
text = "游戏时间：0.00 秒"
horizontal_alignment = 1

[node name="TimerLabel" type="Label" parent="UI"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -100.0
offset_top = 46.0
offset_right = 100.0
offset_bottom = 72.0
grow_horizontal = 2
text = "倒计时：5.0 秒"
horizontal_alignment = 1

[node name="StatusLabel" type="Label" parent="UI"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -100.0
offset_right = 100.0
offset_bottom = 26.0
grow_horizontal = 2
text = "时间系统演示"
horizontal_alignment = 1

[node name="Controls" type="VBoxContainer" parent="UI"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -84.0
offset_right = 100.0
offset_bottom = 84.0
grow_horizontal = 2
grow_vertical = 2

[node name="Speed05Button" type="Button" parent="UI/Controls"]
layout_mode = 2
text = "0.5x 速度"

[node name="Speed10Button" type="Button" parent="UI/Controls"]
layout_mode = 2
text = "1.0x 速度"

[node name="Speed20Button" type="Button" parent="UI/Controls"]
layout_mode = 2
text = "2.0x 速度"

[node name="PauseButton" type="Button" parent="UI/Controls"]
layout_mode = 2
text = "暂停/继续"

[node name="ResetButton" type="Button" parent="UI/Controls"]
layout_mode = 2
text = "重置倒计时"

[connection signal="pressed" from="UI/Controls/Speed05Button" to="." method="_on_speed_button_pressed" binds= [0.5]]
[connection signal="pressed" from="UI/Controls/Speed10Button" to="." method="_on_speed_button_pressed" binds= [1.0]]
[connection signal="pressed" from="UI/Controls/Speed20Button" to="." method="_on_speed_button_pressed" binds= [2.0]]
[connection signal="pressed" from="UI/Controls/PauseButton" to="." method="_on_pause_button_pressed"]
[connection signal="pressed" from="UI/Controls/ResetButton" to="." method="_on_reset_button_pressed"]
